--- a/classification/churn_predict.ipynb
+++ b/classification/churn_predict.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [
     {
@@ -234,7 +234,7 @@
        "[5 rows x 21 columns]"
       ]
      },
-     "execution_count": 63,
+     "execution_count": 80,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -246,7 +246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [
     {
@@ -272,7 +272,7 @@
        " 'churn']"
       ]
      },
-     "execution_count": 64,
+     "execution_count": 81,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -290,7 +290,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [
     {
@@ -542,7 +542,7 @@
        "churn                                    no               yes  "
       ]
      },
-     "execution_count": 65,
+     "execution_count": 82,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -553,7 +553,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [
     {
@@ -583,7 +583,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 66,
+     "execution_count": 83,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -594,7 +594,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -603,7 +603,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -613,7 +613,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [
     {
@@ -627,7 +627,7 @@
        "Name: churn, dtype: object"
       ]
      },
-     "execution_count": 69,
+     "execution_count": 86,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -638,7 +638,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [
     {
@@ -652,7 +652,7 @@
        "Name: churn, dtype: int64"
       ]
      },
-     "execution_count": 70,
+     "execution_count": 87,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -677,7 +677,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 88,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -686,7 +686,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -695,7 +695,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 90,
    "metadata": {},
    "outputs": [
     {
@@ -704,7 +704,7 @@
        "(5634, 1409)"
       ]
      },
-     "execution_count": 73,
+     "execution_count": 90,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -715,7 +715,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 91,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -724,7 +724,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 92,
    "metadata": {},
    "outputs": [
     {
@@ -733,7 +733,7 @@
        "(4225, 1409, 1409)"
       ]
      },
-     "execution_count": 75,
+     "execution_count": 92,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -744,7 +744,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 93,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -755,7 +755,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 94,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -766,13 +766,242 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 95,
    "metadata": {},
    "outputs": [],
    "source": [
     "del df_train['churn']\n",
     "del df_val['churn']\n",
     "del df_test['churn']"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# EDA"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 97,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Reset index \n",
+    "df_full_train = df_full_train.reset_index(drop = True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 100,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "customerid          0\n",
+       "gender              0\n",
+       "seniorcitizen       0\n",
+       "partner             0\n",
+       "dependents          0\n",
+       "tenure              0\n",
+       "phoneservice        0\n",
+       "multiplelines       0\n",
+       "internetservice     0\n",
+       "onlinesecurity      0\n",
+       "onlinebackup        0\n",
+       "deviceprotection    0\n",
+       "techsupport         0\n",
+       "streamingtv         0\n",
+       "streamingmovies     0\n",
+       "contract            0\n",
+       "paperlessbilling    0\n",
+       "paymentmethod       0\n",
+       "monthlycharges      0\n",
+       "totalcharges        0\n",
+       "churn               0\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 100,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#Checking for missing values\n",
+    "df_full_train.isnull().sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 103,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "churn\n",
+       "0    0.730032\n",
+       "1    0.269968\n",
+       "Name: proportion, dtype: float64"
+      ]
+     },
+     "execution_count": 103,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# check the distribution of churn users. Using normalize convert result into % values\n",
+    "df_full_train.churn.value_counts(normalize=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 116,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.27"
+      ]
+     },
+     "execution_count": 116,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "global_churn_rate = df_full_train.churn.mean()\n",
+    "round(global_churn_rate, 2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 117,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "customerid           object\n",
+       "gender               object\n",
+       "seniorcitizen         int64\n",
+       "partner              object\n",
+       "dependents           object\n",
+       "tenure                int64\n",
+       "phoneservice         object\n",
+       "multiplelines        object\n",
+       "internetservice      object\n",
+       "onlinesecurity       object\n",
+       "onlinebackup         object\n",
+       "deviceprotection     object\n",
+       "techsupport          object\n",
+       "streamingtv          object\n",
+       "streamingmovies      object\n",
+       "contract             object\n",
+       "paperlessbilling     object\n",
+       "paymentmethod        object\n",
+       "monthlycharges      float64\n",
+       "totalcharges        float64\n",
+       "churn                 int64\n",
+       "dtype: object"
+      ]
+     },
+     "execution_count": 117,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_full_train.dtypes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 118,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "numerical = ['tenure', 'monthlycharges', 'totalcharges']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 119,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['customerid', 'gender', 'seniorcitizen', 'partner', 'dependents',\n",
+       "       'tenure', 'phoneservice', 'multiplelines', 'internetservice',\n",
+       "       'onlinesecurity', 'onlinebackup', 'deviceprotection', 'techsupport',\n",
+       "       'streamingtv', 'streamingmovies', 'contract', 'paperlessbilling',\n",
+       "       'paymentmethod', 'monthlycharges', 'totalcharges', 'churn'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 119,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_full_train.columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 120,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "categorical = [ 'gender', 'seniorcitizen', 'partner', 'dependents',\n",
+    "        'phoneservice', 'multiplelines', 'internetservice',\n",
+    "       'onlinesecurity', 'onlinebackup', 'deviceprotection', 'techsupport',\n",
+    "       'streamingtv', 'streamingmovies', 'contract', 'paperlessbilling',\n",
+    "       'paymentmethod']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 121,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "gender              2\n",
+       "seniorcitizen       2\n",
+       "partner             2\n",
+       "dependents          2\n",
+       "phoneservice        2\n",
+       "multiplelines       3\n",
+       "internetservice     3\n",
+       "onlinesecurity      3\n",
+       "onlinebackup        3\n",
+       "deviceprotection    3\n",
+       "techsupport         3\n",
+       "streamingtv         3\n",
+       "streamingmovies     3\n",
+       "contract            3\n",
+       "paperlessbilling    2\n",
+       "paymentmethod       4\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 121,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#Select the subset \"categorical\" from the Dataframe df_full_train \n",
+    "df_full_train[categorical].nunique()"
    ]
   },
   {
