--- a/classification/churn_model.ipynb
+++ b/classification/churn_model.ipynb
@@ -446,18 +446,11 @@
    "source": [
     "model.predict_proba(X)[0,1]"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "ml-zoomcamp",
    "language": "python",
    "name": "python3"
   },
@@ -471,7 +464,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.4"
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
